test/official_tests/for/statement_initializer.lox
// error: {"line":3,"message":"expect expression","type":"ParseError"}
// error: {"line":3,"message":"Expect ';' after value","type":"ParseError"}
for ({}; a < 2; a = a + 1) {}
